cargo-features = ["strip"]

[package]
name = "pertrickstence"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
indicatif = "0.16.2"
nix = "0.22.1"
regex = "1.5.4"
zip = "0.5.13"

# it should be as smol as possible
[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = "z"
